--- a/src/app/features/user/packages/packages.component.scss
+++ b/src/app/features/user/packages/packages.component.scss
@@ -1,101 +1,118 @@
-
 body {
-    margin: 0;
-    overflow-x: hidden;
-  }
-  
+  margin: 0;
+  overflow-x: hidden;
+}
+
+.carousel-container {
+  background-image: url('../../../../assets/public/package-carousal.jpg');
+  width: 100%;
+  height: 22rem;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  overflow: hidden;
+}
+
+.main-container {
+  background-color: #eae8e8;
+}
+
+.text-overlay h1 {
+  position: relative;
+  text-align: center;
+  color: #fff;
+  margin-top: 12rem;
+}
+
+h2 {
+  text-align: center;
+}
+
+.packages-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 2rem;
+  max-width: 100%;
+  padding: 0 2rem;
+}
+
+.package-cards {
+  background-color: rgb(154, 194, 244);
+  width: 30%;
+  height: 21rem; /* Fixed height for desktop */
+  border-radius: 2rem;
+  margin-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; /* Ensures button stays at the bottom */
+}
+
+.package-cards img {
+  border-radius: 2rem;
+  margin-left: 1rem;
+  margin-top: 1rem;
+  width: 18rem;
+  height: 9rem;
+}
+
+.package-details {
+  margin-top: 1rem;
+  margin-left: 1.5rem;
+  flex-grow: 1;
+}
+
+.view-more-btn {
+  margin-left: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+/* Mobile styles */
+@media (max-width: 768px) {
   .carousel-container {
-    background-image: url('../../../../assets/public/package-carousal.jpg');
-    width: 100%;
-    height: 22rem;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    overflow: hidden;
+      height: 16rem;
   }
-  
-  .main-container {
-    background-color: #eae8e8;
-  }
-  
+
   .text-overlay h1 {
-    position: relative;
-    text-align: center;
-    color: #fff;
-    margin-top: 12rem;
+      margin-top: 8rem;
+      font-size: 1.5rem;
   }
-  
-  h2 {
-    text-align: center;
-  }
-  
-  
+
   .packages-container {
-    display: flex;
-    flex-wrap: wrap; 
-    justify-content: space-between;
-    margin-top: 2rem;
-    max-width: 100%;
-    padding: 0 2rem;
-  }
-  
-  .package-cards {
-    background-color: rgb(154, 194, 244);
-    width: 30%; 
-    height: 21rem;
-    border-radius: 2rem;
-    margin-bottom: 2rem;
-  }
-  
-  .package-cards img {
-    border-radius: 2rem;
-    margin-left: 1rem;
-    margin-top: 1rem;
-    width: 18rem;
-    height: 9rem;
-  }
-  
-  .package-details {
-    margin-top: 1rem;
-    margin-left: 1.5rem;
-  }
-  
-  
-  @media (max-width: 768px) {
-    .carousel-container {
-      height: 16rem; 
-    }
-  
-    .text-overlay h1 {
-      margin-top: 8rem; 
-      font-size: 1.5rem; 
-    }
-  
-    .packages-container {
-      flex-direction: column; 
-      width: 100%; 
+      flex-direction: column;
+      width: 100%;
       padding: 1rem;
-    }
-  
-    .package-cards {
-      width: 100%; 
-      height: auto;
-      margin-top: 1rem;
-    }
-  
-    .package-cards img {
-      width: 100%; 
-      height: auto; 
-      margin-left: 0;
-    }
-  
-    .package-details {
-      margin-left: 0;
-      padding: 0 1rem; 
-    }
-  
-    h2 {
-      font-size: 1.25rem; 
-    }
   }
-  
+
+  .package-cards {
+      width: 100%;
+      height: auto; /* Let height adjust automatically on mobile */
+      margin-top: 1rem;
+  }
+
+  .package-cards img {
+      width: 22rem;
+      height: auto;
+      margin-left: 1.5rem;
+      margin-top: 1rem;
+  }
+
+  .package-details {
+      margin-left: 0;
+      padding: 0 1rem;
+  }
+
+  .view-more-btn {
+      margin-left: 0;
+      text-align: center;
+  }
+
+  h2 {
+      font-size: 1.25rem;
+  }
+
+  /* For mobile, increase card size */
+  .package-cards {
+      height: auto; /* Let it expand naturally */
+  }
+}
