--- a/src/app/features/user/user-profile/profile-info/profile-info.component.html
+++ b/src/app/features/user/user-profile/profile-info/profile-info.component.html
@@ -1,51 +1,45 @@
-<div class="full-container">
-
-    <div class="col-md-3">
+<div class="full-container d-flex flex-row">
+    <div class="col-md-3 d-none d-md-block">
         <div class="main-container">
             <div class="sidebar-header">
-                <h4 c class="mx-5 pt-4 text-light">Profile Sidebar</h4>
+                <h4 class="mx-5 pt-4 text-light">Profile Sidebar</h4>
             </div>
             <div class="sub-headings-container">
                 <div class="sub-headings">
                     <h6 class="mx-5 text-light mt-5">
                         <span class="mx-2">>></span>
                         <a [routerLink]="['#']" class="text-light">Personal Info</a>
-                      </h6>
+                    </h6>
                 </div>
                 <div class="sub-headings">
                     <h6 class="mx-5 text-light mt-5">
                         <span class="mx-2">>></span>
                         <a [routerLink]="['#']" class="text-light">Workout Plans</a>
-                      </h6>
+                    </h6>
                 </div>
                 <div class="sub-headings">
                     <h6 class="mx-5 text-light mt-5">
                         <span class="mx-2">>></span>
                         <a [routerLink]="['#']" class="text-light">Subscription</a>
-                      </h6>
+                    </h6>
                 </div>
                 <div class="sub-headings">
                     <h6 class="mx-5 text-light mt-5">
                         <span class="mx-2">>></span>
                         <a [routerLink]="['#']" class="text-light">Profile Updation</a>
-                      </h6>
+                    </h6>
                 </div>
             </div>
         </div>
     </div>
-    
+
     <div class="col-md-9">
         <div class="main-container-profile-info container">
-            <!-- Personal Info Starts Here -->
             <div class="personal-info-container">
                 <div class="row">
                     <div class="profile-pic-container col-md-4">
-                        <img *ngIf="hasImage" class="profile-pic"
-                            src="{{userData.PersonalDetails.Image}}"
-                            alt="">
-                            <img *ngIf="!hasImage" class="profile-pic"
-                            src="../../../../../assets/public/blank-profile-picture.webp"
-                            alt="">
+                        <img *ngIf="hasImage" class="profile-pic" src="{{userData.PersonalDetails.Image}}" alt="">
+                        <img *ngIf="!hasImage" class="profile-pic" src="../../../../../assets/public/blank-profile-picture.webp" alt="">
                         <h5 class="mt-3">Profile Picture</h5>
                     </div>
                     <div class="col-md-8 personal-info">
@@ -63,7 +57,7 @@
                             <h6>Weight: {{userData.PersonalDetails.Weight}}</h6>
                         </div>
                         <ng-template #updateDetails>
-                            <h5 class="mt-5 text-secondary">complete your profile</h5>
+                            <h5 class="mt-5 text-secondary">Complete your profile</h5>
                         </ng-template>
                         <div *ngIf="hasPackage" class="personal-info-sub">
                             <h6>Package: {{userData.Package.Packagename}} package</h6>
@@ -71,9 +65,7 @@
                     </div>
                 </div>
             </div>
-            <!-- Personal Info Ends Here -->
-        
-            <!-- Workout Plans Starts Here -->
+
             <div class="workout-plan-container mt-5">
                 <h4>Workout and Diet Plans</h4>
                 <div class="row">
@@ -90,44 +82,35 @@
                             <h6>Protein - <span>{{userData.Diet.Protein}}g / day</span></h6>
                             <h6>Carbohydrate - <span>{{userData.Diet.Carbohydrate}}g / day</span></h6>
                         </div>
-        
                         <ng-template #getPackage>
-                            <h5 class="mt-5 text-secondary">purchase a package to get exercises and diet</h5>
+                            <h5 class="mt-5 text-secondary">Purchase a package to get exercises and diet</h5>
                         </ng-template>
                     </div>
                 </div>
             </div>
-            <!-- Workout Plans Ends Here -->
-        
+
             <div class="subscription-details-container mt-5">
                 <h4>Subscription Details</h4>
                 <div *ngIf="hasSubscription; else noSubscription" class="col-md-12 personal-info-sub">
                     <h6>Subscription: {{userData.Subscription.Name}}</h6>
                     <h6>Price: {{userData.Subscription.Price}}</h6>
-                    <h6>Features: </h6> <p *ngFor="let feature of userData.Subscription.Features">{{feature}},</p>
+                    <h6>Features: </h6>
+                    <p *ngFor="let feature of userData.Subscription.Features">{{feature}},</p>
                 </div>
                 <div *ngIf="hasPackage" class="col-md-12 personal-info-sub">
                     <h6>Package: {{userData.Package.Packagename}} package</h6>
                 </div>
-        
                 <ng-template #noSubscription>
-                    <h5 class="mt-5 text-secondary">purchase a package to get exercises and diet</h5>
+                    <h5 class="mt-5 text-secondary">Purchase a package to get exercises and diet</h5>
                 </ng-template>
             </div>
-        
-        
-            <!-- Update Profile Starts Here -->
+
             <div class="update-profile-container mt-5">
                 <h4>Update Profile</h4>
                 <div class="col-md-4">
-                    <!-- Update profile form will go here -->
-                     <button type="button" class="btn btn-primary" (click)="openUpdateUserDialog()">Update details</button>
+                    <button type="button" class="btn btn-primary" (click)="openUpdateUserDialog()">Update details</button>
                 </div>
             </div>
-            <!-- Update Profile Ends Here -->
         </div>
-        
     </div>
-
 </div>
-
