--- a/src/app/shared/utils/header/header.component.html
+++ b/src/app/shared/utils/header/header.component.html
@@ -1,122 +1,193 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <!-- <nav class="navbar navbar-expand-lg header-clr">
+    <a class="brand-name" >Fitzee</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+  </nav>
+
+
+  <nav *ngIf="isAdmin && isLoggedIn" class="sub-header navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarNavAdmin"
+      aria-controls="navbarNavAdmin"
+      aria-expanded="false"
+      aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAdmin">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" [routerLink]="'/admindashboard'">Dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
+          <a class="nav-link" [routerLink]="'/usermanagement'">User</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
+          <a class="nav-link" [routerLink]="'/trainermanagement'">Trainer</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/exercisemanagement'">Exercises</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/newsmanagement'">News</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/packagemanagement'">Packages</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/subscriptionmanagement'">Subscription</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/reports'">Reports</a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
     </div>
-  </nav> -->
+    <button *ngIf="user" class="ml-auto login-btn" (click)="logOut('admin')" type="button">Sign Out</button>
+  </div>
+</nav>
 
-  <nav class="navbar navbar-expand-lg header-clr">
-    <a class="brand-name" >Fitzee</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+
+<nav *ngIf="!isAdmin && isLoggedIn && !trainer" class="sub-header navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarNavUser"
+      aria-controls="navbarNavUser"
+      aria-expanded="false"
+      aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-  </nav>
-  <nav *ngIf="isAdmin && isLoggedIn" class="sub-header navbar navbar-expand-lg navbar-light bg-light">
-    <div  class="container-fluid">
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" [routerLink]="'/admindashboard'">Dashboard</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="'/usermanagement'">User</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="'/trainermanagement'">Trainer</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="'/exercisemanagement'">Exercises</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="'/newsmanagement'">News</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="'/packagemanagement'">Packages</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="'/subscriptionmanagement'">Subscription</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="'/reports'">Reports</a>
-          </li>
-        </ul>
-      </div>
-      <button *ngIf="user" class="ml-auto login-btn" (click)="logOut('admin')" type="button">sign out</button>
+    <div class="collapse navbar-collapse" id="navbarNavUser">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" [routerLink]="'/'">Fitness</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/packages'">Packages</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/chat'">Chat</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+    <button *ngIf="!user" class="ml-auto login-btn" [routerLink]="'/login'" type="button">Sign Up</button>
+    <button *ngIf="user" class="ml-auto login-btn" [routerLink]="'/userprofile'" type="button">Profile</button>
+    <button *ngIf="user" class="ml-auto login-btn" (click)="logOut('user')" type="button">Sign Out</button>
+  </div>
+</nav>
 
-  <nav *ngIf="!isAdmin && isLoggedIn && !trainer" class="sub-header navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" [routerLink]="'/'">Fitness</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="'/packages'">Packages</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="'/chat'">Chat</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="'#'">about us</a>
-          </li>
-        </ul>
-      </div>
-      <button *ngIf="!user" class="ml-auto login-btn" [routerLink]="'/login'" type="button">signup</button>
-      <button *ngIf="user" class="ml-auto login-btn" [routerLink]="'/userprofile'" type="button">Profile</button>
-      <button *ngIf="user" class="ml-auto login-btn" (click)="logOut('user')" type="button">sign out</button>
+
+<nav *ngIf="trainer" class="sub-header navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarNavTrainer"
+      aria-controls="navbarNavTrainer"
+      aria-expanded="false"
+      aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavTrainer">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" [routerLink]="'/trainerdashboard'">Dashboard</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/trainerchat'">Chat</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+    <button *ngIf="user" class="ml-auto login-btn" (click)="logOut('trainer')" type="button">Sign Out</button>
+  </div>
+</nav> -->
 
 
-  <nav *ngIf="trainer" class="sub-header navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" [routerLink]="'/trainerdashboard'">Dashboard</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="'/trainerchat'">Chat</a>
-          </li>
-        </ul>
-      </div>
-      <button *ngIf="user" class="ml-auto login-btn" (click)="logOut('trainer')" type="button">sign out</button>
+<!-- Main Navbar -->
+<nav class="navbar navbar-expand-lg header-clr">
+  <a class="brand-name">Fitzee</a>
+  <button class="custom-toggler" type="button" (click)="toggleNavbar()" aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation" [ngClass]="{'is-active': navbarOpen}">
+    <span class="custom-toggler-icon"></span>
+  </button>
+</nav>
+
+<!-- Admin Navbar -->
+<nav *ngIf="isAdmin && isLoggedIn" class="sub-header navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <div class="collapse navbar-collapse" [ngClass]="{'show': navbarOpen}" id="navbarNavAdmin">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" [routerLink]="'/admindashboard'">Dashboard</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/usermanagement'">User</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/trainermanagement'">Trainer</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/exercisemanagement'">Exercises</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/newsmanagement'">News</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/packagemanagement'">Packages</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/subscriptionmanagement'">Subscription</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/reports'">Reports</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+    <button *ngIf="user" class="ml-auto login-btn" (click)="logOut('admin')" type="button">Sign Out</button>
+  </div>
+</nav>
 
+<!-- User Navbar -->
+<nav *ngIf="!isAdmin && isLoggedIn && !trainer" class="sub-header navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <div class="collapse navbar-collapse" [ngClass]="{'show': navbarOpen}" id="navbarNavUser">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" [routerLink]="'/'">Fitness</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/packages'">Packages</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/chat'">Chat</a>
+        </li>
+      </ul>
+    </div>
+    <button *ngIf="!user" class="ml-auto login-btn" [routerLink]="'/login'" type="button">Sign Up</button>
+    <button *ngIf="user" class="ml-auto login-btn" [routerLink]="'/userprofile'" type="button">Profile</button>
+    <button *ngIf="user" class="ml-auto login-btn" (click)="logOut('user')" type="button">Sign Out</button>
+  </div>
+</nav>
 
-  
-
-
-<div class="starter" *ngIf="isAdmin"></div>
+<!-- Trainer Navbar -->
+<nav *ngIf="trainer" class="sub-header navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <div class="collapse navbar-collapse" [ngClass]="{'show': navbarOpen}" id="navbarNavTrainer">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" [routerLink]="'/trainerdashboard'">Dashboard</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/trainerchat'">Chat</a>
+        </li>
+      </ul>
+    </div>
+    <button *ngIf="user" class="ml-auto login-btn" (click)="logOut('trainer')" type="button">Sign Out</button>
+  </div>
+</nav>
