--- a/src/app/features/admin/exercise-management/exercise-management.component.html
+++ b/src/app/features/admin/exercise-management/exercise-management.component.html
@@ -4,5 +4,5 @@
 <div class="container">
     <h3>Exercise Management</h3>
     <app-data-table [Headers]="headers" [keyNames]="keynames" [addItemUrl]="newItemurl" [editItemUrl]="editItemUrl" [tableData]="Data"
-        [isUsers]="user" [imageVisibility]="true" (sendTrigger)="operationTrigger($event)" (sendTrigger)="statusUpdate($event)"></app-data-table>
+        [isUsers]="user" [itemName]="'exercise'" [imageVisibility]="true" (sendTrigger)="operationTrigger($event)" (sendTrigger)="statusUpdate($event)"></app-data-table>
 </div>
