--- a/src/app/features/user/chat-bot/chat-bot.component.html
+++ b/src/app/features/user/chat-bot/chat-bot.component.html
@@ -5,8 +5,8 @@
         <p class="text-light">How can I assist you today?</p>
 
         <div class="suggestion-buttons">
-            <button (click)="suggestionAction('Workout_Tips')">Workout Tips</button>
-            <button (click)="suggestionAction('Nutrition_Advice')">Nutrition Advice</button>
+            <button (click)="suggestionAction('Packages')">Packages</button>
+            <button (click)="suggestionAction('Subscription')">Subscriptions</button>
             <button (click)="suggestionAction('Fitness_Goals')">Fitness Goals</button>
         </div>
 
