--- a/src/app/shared/utils/data-table/data-table.component.html
+++ b/src/app/shared/utils/data-table/data-table.component.html
@@ -1,17 +1,33 @@
 <div class="container">
-    <div class="search-bar" *ngIf="itemName !== 'reports'">
+    <div class="search-bar">
         <input type="text" class="form-control" (input)="search(searchinput.value)" placeholder="search..."
             #searchinput>
         <button class="btn btn-success btn-sm"><i class="fa-brands fa-searchengin"></i></button>
     </div>
 
     <!-- Filter by status -->
-    <div class="filter-sort-container my-3" *ngIf="itemName !== 'reports'">
-        <label for="statusFilter">Filter by Status: </label>
-        <select id="statusFilter" class="form-control d-inline w-auto">
+    <div class="filter-sort-container my-3">
+        <label *ngIf="itemName !== 'reports'" for="statusFilter">Filter by Status: </label>
+        <select *ngIf="itemName !== 'reports'" id="statusFilter" class="form-control d-inline w-auto">
             <option value="">All</option>
             <option value="true">Active</option>
             <option value="false">Inactive</option>
+        </select>
+
+        <!-- reports packages -->
+        <label *ngIf="itemName === 'reports'" for="statusFilter">Package: </label>
+        <select *ngIf="itemName === 'reports'" id="packageFilter" class="form-control d-inline w-auto">
+            <option value="">All</option>
+            <option *ngFor="let package of packages" value="{{package.Packagename}}">{{package.Packagename}}</option>
+        </select>
+
+        <!-- reports subscription -->
+        <label *ngIf="itemName === 'reports'" for="statusFilter">Subscription: </label>
+        <select *ngIf="itemName === 'reports'" id="subscriptionFilter" class="form-control d-inline w-auto">
+            <option value="">All</option>
+            <option *ngFor="let subscription of subscriptions" value="{{subscription.Name}}">{{subscription.Name}}
+            </option>
+
         </select>
 
         <!-- Sort by date -->
@@ -28,9 +44,15 @@
         <label for="toDate" class="ms-3">To: </label>
         <input type="date" id="toDate" class="form-control d-inline w-auto" [(ngModel)]="toDate">
 
-        <button type="button" class="btn btn-success btn-sm" (click)="applyAllFilters()">apply</button>
-        <button type="button" class="btn btn-success btn-sm" (click)="resetFilters()">reset</button>
-        
+        <button *ngIf="itemName !== 'reports'" type="button" class="btn btn-success btn-sm"
+            (click)="applyAllFilters()">apply</button>
+        <button *ngIf="itemName !== 'reports'" type="button" class="btn btn-success btn-sm"
+            (click)="resetFilters()">reset</button>
+
+        <button *ngIf="itemName === 'reports'" type="button" class="btn btn-success btn-sm"
+            (click)="applyAllFilters()">apply</button>
+        <button *ngIf="itemName === 'reports'" type="button" class="btn btn-success btn-sm"
+            (click)="resetFilters()">reset</button>
     </div>
 
     <button *ngIf="!isUsers && itemName !== 'reports' " type="button" (click)="callFunction()"
@@ -43,6 +65,7 @@
                 <th *ngIf="!isUsers && itemName !== 'reports' ">Inserted</th>
                 <th *ngIf="!isUsers && itemName !== 'reports' ">Last Edited</th>
                 <th *ngIf="itemName === 'user' || itemName === 'trainer'">Joined Date</th>
+                <th *ngIf="itemName === 'reports'">Date</th>
                 <th *ngIf="imageVisibility && itemName !== 'reports' ">Images</th>
                 <th *ngIf="itemName !== 'reports'">Actions</th>
             </tr>
@@ -51,9 +74,10 @@
             <tr *ngFor="let row of uiData; let i = index">
                 <td>{{ i | serialNumber }}</td>
                 <td *ngFor="let key of keyNames">{{ row[key] | textTrim }}</td>
-                <td *ngIf="!isUsers">{{ row[inserted] | date }}</td>
-                <td *ngIf="!isUsers">{{ row[lastedited] | date }}</td>
+                <td *ngIf="!isUsers && itemName !== 'reports'">{{ row[inserted] | date }}</td>
+                <td *ngIf="!isUsers && itemName !== 'reports'">{{ row[lastedited] | date }}</td>
                 <td *ngIf="itemName === 'user' || itemName === 'trainer'">{{row[joinedDate] | date}}</td>
+                <td *ngIf="itemName === 'reports'">{{ row[purchaseDate] | date }}</td>
                 <td *ngIf="imageVisibility">
                     <img class="image" [src]="row[Image]" alt="Image" />
                 </td>
@@ -63,6 +87,9 @@
                         class="btn btn-danger btn-sm me-2">Delete</button>
                     <button type="button" (click)="updateStatus(row[id])" class="btn btn-secondary btn-sm">update
                         status</button>
+                    <button *ngIf="itemName === 'exercise'" type="button" (click)="openModal(row[id])"
+                        class="btn btn-dark btn-sm">
+                        more info</button>
                 </td>
                 <td *ngIf="isUsers">
                     <button type="button" (click)="updateVerification(row[id])" class="btn btn-secondary btn-sm">update
